// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakUp state: {"situation":"通常"} 1`] = `
Object {
  "situation": "別れた",
}
`;

exports[`breakUp state: undefined 1`] = `
Object {
  "situation": "別れた",
}
`;

exports[`neglect state: {"situation":"通常"} 1`] = `
Object {
  "situation": "しんだ",
}
`;

exports[`neglect state: undefined 1`] = `
Object {
  "situation": "しんだ",
}
`;

exports[`notTakeCare 状態が変わる場合 state: {"situation":"通常"} 1`] = `
Object {
  "situation": "通常",
}
`;

exports[`notTakeCare 状態が変わる場合 state: undefined 1`] = `
Object {
  "situation": "通常",
}
`;

exports[`takeCare state: {"situation":"通常"} 1`] = `
Object {
  "situation": "通常",
}
`;

exports[`takeCare state: undefined 1`] = `
Object {
  "situation": "通常",
}
`;
